--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.napier.mps</groupId>
     <artifactId>DeveOP</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0.2</version>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
