--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,15 @@ jobs:
         run: docker run --name devopscontainer -d devopsimage
       - name: view logs
         run: docker logs devopscontainer
+version: '3'
+services:
+  # Application Dockerfile is in same folder which is .
+  app:
+    build: .
+
+  # db is is db folder
+  db:
+    build: db/.
+    restart: always
+    ports:
+      - "33060:3306"
