--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,32 +4,20 @@ on: push
 jobs:
   build:
     name: Hello world action
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up JDK 19
+        uses: actions/setup-java@v2
         with:
-          submodules: recursive
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
-        with:
-          java-version: '11'
+          java-version: '19'
           distribution: 'adopt'
-      - name: Build with Maven
-        run: mvn package
-      - name: Run docker compose
-        run: docker compose up --abort-on-container-exit
-
-
-version: '3'
-services:
-  # Application Dockerfile is in same folder which is .
-  app:
-    build: .
-
-  # db is is db folder
-  db:
-    build: db/.
-    restart: always
-    ports:
-      - "33060:3306"
+      - name: Compile with Maven
+        run: mvn compile
+      - name: Build Docker Image
+        run: docker build -t devopsimage .
+      - name: Run image
+        run: docker run --name devopscontainer -d devopsimage
+      - name: view logs
+        run: docker logs devopscontainer
